@@ -4,6 +4,8 @@
 * WordPress 6.9 compatible.
 * WooCommerce 10.4 compatible.
 * Fixed incorrect function call parameters. [#127](https://github.com/itthinx/affiliates/pull/127)
+* Fixed stored registration field labels translation.
+* Fixed translation calls made too early causing deprecated notices.
 
 = 5.4.0 =
 * WordPress 6.9 compatible.
